//
// $ protoc --go_out . addbook.proto
// $ protoc -I books/ books/books.proto --go_out=plugins=grpc:books
//

syntax = "proto3";

package books;

import "google/protobuf/timestamp.proto";

service Booker {
    rpc Borrow(Borrower) returns (Status) {}
}

message Borrower {
    Book book = 1;
    Person person = 2;
    string id = 3;
}

message Book {
    string name = 1;
    int32 id = 2;
}


message Status {
    string message = 1;
}

message Person {
    string name = 1;
    int32 id = 2;
    string email = 3;
    
    enum PhoneType {
        MOBILE = 0;
        HOME = 1;
        WORK = 2;
    }
    
    message PhoneNumber {
        string number = 1;
        PhoneType type = 2;
    }
    
    repeated PhoneNumber phones = 4;
    google.protobuf.Timestamp last_updated = 5;
    
}

message AddressBook {
    repeated Person people = 1;
}