
// grpc
// $ cd src/
// $ protoc -I helloworld/ helloworld/helloworld.proto --go_out=plugins=grpc:helloworld
//
syntax = "proto3";

package helloworld;

service Greeter {
    rpc SayHello (HelloRequest) returns (HelloReply) {}
    rpc SayHelloAgain(HelloRequest) returns (HelloReply) {}
}

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}